test/netlist/error/any-block.bop
_(a) = b
where
  b = id(a);
end where;
